--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <header>
      Was sind die Anforderungen an die Informatiker. Zähle die 4 Punkte auf (siehe auch das erste Dokument auf der rechten Seite).
      <br></br>
-     1.  __
+     1.  __Gute Analysefähigkeit, vernetztes Denken_
      <br></br>
-     2.  __
+     2.  __Technisches Geschick und Interesse für technologische Trends
      <br></br>
-     3.  __
+     3.  __Team- und Kommunikationsfähigkeit
      <br></br>
-     4.  __   
+     4.  __ Interesse an naturwissenschaftlichen Fächern  
      </header> 
     
     <article>
