--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <main>
   <header>
     <!-- Achtung: Aus Gründen des Datenschutz keine persönlichen Daten angeben!!! -->
-    Webseite von Rufname
+    Webseite von Yusa
   </header>
 
   <nav>
@@ -31,23 +31,23 @@
     <header>
      Was sind die Anforderungen an die Informatiker. Zähle die 4 Punkte auf (siehe auch das erste Dokument auf der rechten Seite).
      <br></br>
-     1.  Gute Analysefähigkeit, vernetztes Denken
+     1. Gute Analysefähigkeit, vernetztes Denken
      <br></br>
-     2.  Technisches Geschick und Interesse für technologische Trends
+     2. Technisches Geschick und Interesse für technologische Trends
      <br></br>
-     3.  Team- und Kommunikationsfähigkeit
+     3. Team- und Kommunikationsfähigkeit
      <br></br>
-     4.  Interesse an naturwissenschaftlichen Fächern  
+     4. Interesse an naturwissenschaftlichen Fächern  
      </header> 
     
     <article>
     Was sind wichtige Aufgaben eines Informatikes in Plattformenticklung? Zähle 3 Punkte auf.
     <br></br>
-    1.  Du planst, bewirtschaftest und wartest physische oder virtuelle Serversysteme und -dienste.
+    1. Du planst, bewirtschaftest und wartest physische oder virtuelle Serversysteme und -dienste.
     <br></br>
-    2.  Du planst lokale Netzwerke (LAN), wählst geeignete Netzkomponenten aus, installierst und konfigurierst diese und überwachst den laufenden Betrieb.
+    2. Du planst lokale Netzwerke (LAN), wählst geeignete Netzkomponenten aus, installierst und konfigurierst diese und überwachst den laufenden Betrieb.
     <br></br>
-    3.  Du kümmerst dich um die Sicherheit und Verfügbarkeit der Systeme und Dienste sowie die Leistungsfähigkeit des Netzes.
+    3. Du kümmerst dich um die Sicherheit und Verfügbarkeit der Systeme und Dienste sowie die Leistungsfähigkeit des Netzes.
     </article>
     
      <footer>
