--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
  
   <footer>
     <!-- Der Fussbereich für abschliessende Inhalte -->
-    Hier kannst Du dein Fazit erfassen. Wie hast du den Tag im BIT erlebt? Was war neu und spannend für dich? Was war herausfordernd? Wie hast du den Tag im BIT erlebt? 
+    Mein Fazit: Der Tag hat sehr spass gemacht. Für mich war das mit den Drohnen fliegen und mit dem Gamebot neu und spannend. Mit der Drohne in die Kiste zu kommen war eine Herausforderung. 
   </footer>
 </main>   
 </body>
